--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>isi3-tp-instance</groupId>
     <artifactId>isi3-tp-instance</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -21,6 +22,7 @@
     </build>
     <modules>
         <module>singleton</module>
+        <module>singletonSpringBoot</module>
     </modules>
 
 </project>
